force-app/main/default/objects/Activity_Supplement__c/Activity_Supplement__c.object-meta.xml
<CustomObject>
    <description>Stores related activity fields that cannot be added to the restrictive activity custom fields
- Long Text Area (Over 255 characters)
- Possible Rich Text as a later enhancement</description>
    <label>Activity Supplement</label>
    <nameField>
        <displayFormat>ASN-{00000000}</displayFormat>
        <label>Activity Supplement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Supplements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>