force-app/main/default/objects/Activity_Supplement__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <description>Activity Record Id</description>
    <externalId>true</externalId>
    <label>Activity</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>