force-app/main/default/objects/Activity_Supplement__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <description>Internal Activity Notes</description>
    <label>Meeting/Call Notes - Internal to HL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>