force-app/main/default/objects/Activity_Supplement__c/fields/Sync_Description__c.field-meta.xml
<CustomField>
    <fullName>Sync_Description__c</fullName>
    <description>Holds the synch description to be sent to outlook</description>
    <label>Sync Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>